正/倒计时完成     未完成：计时长按/倒计时响闹

--- a/ASM/EXE/50P104.htm
+++ b/ASM/EXE/50P104.htm
@@ -132,7 +132,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >Fosc/4</td>
-    <td width="10%" align="center" >60h</td>
+    <td width="10%" align="center" >C3h</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -154,7 +154,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >TMR0</td>
-    <td width="10%" align="center" >86h</td>
+    <td width="10%" align="center" >6Bh</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -177,7 +177,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >DIV</td>
-    <td width="10%" align="center" >B4h</td>
+    <td width="10%" align="center" >C4h</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -223,7 +223,7 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center">0 (OFF)</td>
-    <td width="10%" align="center">Logic High</td>
+    <td width="10%" align="center">Fsub/16 (3/4duty)</td>
     <td width="10%" align="center">2M</td>
     <td width="10%" align="center">OFF</td>
     <td width="10%" align="center">OFF</td>
@@ -245,7 +245,7 @@ table { font-size: 8pt;text-align:center}
     <td width="10%" align="center" ></td>
   </tr>
   <tr>
-    <td width="10%" align="center" colspan="2">546 Hz (Fsub/64)</td>
+    <td width="10%" align="center" colspan="2">9K Hz (Fsub/4)</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
