--- a/ASM/EXE/50P104.htm
+++ b/ASM/EXE/50P104.htm
@@ -132,7 +132,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >Fosc/4</td>
-    <td width="10%" align="center" >C3h</td>
+    <td width="10%" align="center" >C8h</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -154,7 +154,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >TMR0</td>
-    <td width="10%" align="center" >6Bh</td>
+    <td width="10%" align="center" > Eh</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -177,7 +177,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >DIV</td>
-    <td width="10%" align="center" >C4h</td>
+    <td width="10%" align="center" >2Bh</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -201,13 +201,13 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
-    <td width="10%" align="center" >1X (1/3 bias 3.0V)</td>
+    <td width="10%" align="center" >00 (1/2 bias 3.0V)</td>
     <td width="10%" align="center" >11b (Strong 8 cycles)</td>
     <td width="10%" align="center" >0 (Disable)</td>
-    <td width="10%" align="center" >2h (19*5)</td>
+    <td width="10%" align="center" >1h (20*4)</td>
     <td width="10%" align="center" >1800h</td>
     <td width="10%" align="center" >0 (Frame Rate/2)</td>
-    <td width="10%" align="center" >72</td>
+    <td width="10%" align="center" >68</td>
   </tr>
   <tr>
     <td width="10%" rowspan="2" align="center">Sound</td>
@@ -223,7 +223,7 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center">0 (OFF)</td>
-    <td width="10%" align="center">Fsub/16 (3/4duty)</td>
+    <td width="10%" align="center">TMR0/2 (1/2duty)</td>
     <td width="10%" align="center">2M</td>
     <td width="10%" align="center">OFF</td>
     <td width="10%" align="center">OFF</td>
@@ -509,7 +509,7 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center" >0 (Disable)</td>
-    <td width="10%" align="center" >2.30V</td>
+    <td width="10%" align="center" >2.10V</td>
     <td width="10%" align="center" >0 (VDD&gt;LVD)</td>
     <td width="10%" align="center" >1</td>
     <td width="10%" align="center" ></td>
