未完成：响闹、计时长按

--- a/ASM/EXE/50P104.htm
+++ b/ASM/EXE/50P104.htm
@@ -131,8 +131,8 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
-    <td width="10%" align="center" >Fosc/4</td>
-    <td width="10%" align="center" >C8h</td>
+    <td width="10%" align="center" >Fsub</td>
+    <td width="10%" align="center" >BCh</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -153,8 +153,8 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
-    <td width="10%" align="center" >TMR0</td>
-    <td width="10%" align="center" > Eh</td>
+    <td width="10%" align="center" >Fosc/4</td>
+    <td width="10%" align="center" >FEh</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -177,7 +177,7 @@ table { font-size: 8pt;text-align:center}
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
     <td width="10%" align="center" >DIV</td>
-    <td width="10%" align="center" >2Bh</td>
+    <td width="10%" align="center" >1Eh</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
@@ -201,13 +201,13 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center" >0 (OFF)</td>
-    <td width="10%" align="center" >00 (1/2 bias 3.0V)</td>
+    <td width="10%" align="center" >01 (1/3 bias 4.5V)</td>
     <td width="10%" align="center" >11b (Strong 8 cycles)</td>
     <td width="10%" align="center" >0 (Disable)</td>
-    <td width="10%" align="center" >1h (20*4)</td>
+    <td width="10%" align="center" >2h (19*5)</td>
     <td width="10%" align="center" >1800h</td>
     <td width="10%" align="center" >0 (Frame Rate/2)</td>
-    <td width="10%" align="center" >68</td>
+    <td width="10%" align="center" >72</td>
   </tr>
   <tr>
     <td width="10%" rowspan="2" align="center">Sound</td>
@@ -223,8 +223,8 @@ table { font-size: 8pt;text-align:center}
   </tr>
   <tr>
     <td width="10%" align="center">0 (OFF)</td>
-    <td width="10%" align="center">TMR0/2 (1/2duty)</td>
-    <td width="10%" align="center">2M</td>
+    <td width="10%" align="center">Logic low</td>
+    <td width="10%" align="center">TONE</td>
     <td width="10%" align="center">OFF</td>
     <td width="10%" align="center">OFF</td>
     <td width="10%" align="center" ></td>
@@ -245,7 +245,7 @@ table { font-size: 8pt;text-align:center}
     <td width="10%" align="center" ></td>
   </tr>
   <tr>
-    <td width="10%" align="center" colspan="2">9K Hz (Fsub/4)</td>
+    <td width="10%" align="center" colspan="2">1K Hz (Fsub/32)</td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
     <td width="10%" align="center" ></td>
